# sot-robohow-demo

./: CMakeLists.txt  README.md
python/: CMakeLists.txt  hrp2_10_test_rviz.py  hrp2_14_test_rviz.py  hrp4_pouring_task_two_arms.py  hrp4_rviz.py  hrp4_scenario.py  hrp4_startup.py  hrp4_test_rviz.py  pouring_task_one_arm.py  pr2_rviz.py  romeo_rviz.py  romeo_test_rviz.py  tools.py
src/: CMakeLists.txt  circle_motion.cpp  circle_motion.h  cylinder_pouring.cpp  cylinder_pouring.h  superviser.cpp  superviser.h
src/dynamic_graph/sot/robohow/: gripper.py  superviser.py
